--- a/SCOT_Event_Related.ipynb
+++ b/SCOT_Event_Related.ipynb
@@ -105,6 +105,9 @@
    "source": [
     "## SCOT_Event_Related ##\n",
     "\n",
+    "## SCOT Processing Pipeline created by Neil Dundon and adapted by Tom Bullock to visualize and output event-codes/triggers\n",
+    "## Date: 09.20.23\n",
+    "\n",
     "## CELL 1: LOAD ###\n",
     "# Run this cell to load your datafile through the GUI (currently only works with .acq files, any template).\n",
     "# For each window, select the required option then press click \"X\" to close the window (your selection will be saved) \n",
